# framing-synth

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: decisions.md  framing_rules.md
examples/: expected_bom.json  expected_framing.json  input_panel_solid.json  input_panel_window.json
scripts/: demo.py  visualise.py
src/framing_synth/: __init__.py  _geometry.py  _rules.py  bom.py  openings.py  plates.py  studs.py  synthesizer.py  validator.py
tests/: conftest.py  test_bom.py  test_collision.py  test_openings.py  test_plates.py  test_schema_validation.py  test_studs.py
