[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "framing-synth"
version = "0.1.0"
description = "Synthesise light-wood-frame members from wall panels (AEC pipeline L2-b)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "aec-schema>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "matplotlib>=3.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/framing_synth"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"
